2001-10-31  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (transform): Update documentation.

2001-10-31  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* m4/gcj.m4 (AM_PROG_GCJ): Define GCJFLAGS if unset.
	Reported by Olivier Louchart-Fletcher <olivier@zipworld.com>.

2001-10-30  Akim Demaille  <akim@epita.fr>

	* automake.in (&create): Reinstall.

2001-10-30  Akim Demaille  <akim@epita.fr>

	* automake.in (&append_exeext): Use macro_delete.

2001-10-30  Akim Demaille  <akim@epita.fr>

	* automake.in ($verbose): Remove, inherited from
	Automake::General.
	(&variable_delete): Rename as...
	(&macro_delete): this, for consistency.
	(&variable_assert): New.
	(&variable_value_as_list, &variable_value_as_list_recursive_worker):
	Use it.

2001-10-29  Akim Demaille  <akim@epita.fr>

	* m4/lispdir.m4 (AM_PATH_LISPDIR): Use AC_RUN_LOG to avoid
	cluttering configure's stdout.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in: Various formatting changes.
	(create): Remove, unused.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in (&append_exeext): New.
	(&am_primary_prefixes): Use it.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in (am_primary_prefixes): Now, in accordance with its
	comment, return the list of prefixes actually used, not all the
	possible prefixes for a primary.
	(&handle_libraries, &handle_ltlibraries, &handle_java)
	(&am_install_var): Adjust.
	* Makefile.am (maintainer-check): Allow `local $_;'.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in: Various formatting changes.
	(&variable_defined): Second argument is optional.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_primary_prefixes): Now returns a list, not a
	hash.
	(&handle_libraries, &handle_ltlibraries, &handle_java)
	(&am_install_var): Adjust.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in (@libtoolize_files, @libtoolize_sometimes): Rename
	as...
	(@libtool_files, @libtool_sometimes): these.