@@ -1,5 +1,5 @@
 ## automake - create Makefile.in from Makefile.am
-## Copyright 2001 Free Software Foundation, Inc.
+## Copyright 2001  Free Software Foundation, Inc.
 
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -16,6 +16,8 @@
 ## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 ## 02111-1307, USA.
 
+## FIXME: These two are to be removed once we trace Autoconf, since
+## they are AC_SUBST'ed.
 LEX_OUTPUT_ROOT = @LEX_OUTPUT_ROOT@
 LEXLIB = @LEXLIB@
 
@@ -24,5 +26,8 @@ LEXLIB = @LEXLIB@
 if %?MORE-THAN-ONE%
 	$(SHELL) $(YLWRAP) %SOURCE% $(LEX_OUTPUT_ROOT).c %OBJ% -- %COMPILE%
 else !%?MORE-THAN-ONE%
-	%COMPILE% %SOURCE% && mv $(LEX_OUTPUT_ROOT).c %OBJ%
+	%COMPILE% %SOURCE%
+## Edit out `#line' or `#' directives.
+	sed '/^#/ s/$(LEX_OUTPUT_ROOT)\.c/%OBJ%/' $(LEX_OUTPUT_ROOT).c >%OBJ%
+	rm $(LEX_OUTPUT_ROOT).c
 endif !%?MORE-THAN-ONE%
