@@ -1,5 +1,5 @@
 ## automake - create Makefile.in from Makefile.am
-## Copyright 1998, 1999, 2001 Free Software Foundation, Inc.
+## Copyright 1998, 1999, 2001  Free Software Foundation, Inc.
 
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -21,12 +21,22 @@
 if %?MORE-THAN-ONE%
 	$(SHELL) $(YLWRAP) %SOURCE% y.tab.c %OBJ% y.tab.h %BASE%.h -- %COMPILE%
 else !%?MORE-THAN-ONE%
-	%COMPILE% %SOURCE% && mv y.tab.c %OBJ%
+	%COMPILE% %SOURCE%
+## Edit out `#line' or `#' directives.
+	sed '/^#/ s/y\.tab\.c/%OBJ%/' y.tab.c >%OBJ%
+	rm y.tab.c
+## Edit out Bison multiple inclusion guards.  It may be BISON_Y_TAB_H,
+## or Y_TAB_H depending upon the version, that's why the regexp is
+## so loose.
 	if test -f y.tab.h; then \
-	  if cmp -s y.tab.h %BASE%.h; then \
-	    rm -f y.tab.h; \
+	  to=`echo "%BASE%_H" | sed \
+                -e 'y/abcdefghijklmnopqrstuvwxyz/ABCDEFGHIJKLMNOPQRSTUVWXYZ/' \
+                -e 's/[^ABCDEFGHIJKLMNOPQRSTUVWXYZ]/_/g'`; \
+	    sed "/^#/ s/Y_TAB_H/$$to/g" y.tab.h >%BASE%.ht; \
+	  if cmp -s %BASE%.ht %BASE%.h; then \
+	    rm %BASE%.ht ;\
 	  else \
-	    mv y.tab.h %BASE%.h; \
+	    mv %BASE%.ht %BASE%.h; \
 	  fi; \
 	fi
 endif !%?MORE-THAN-ONE%
