@@ -7,6 +7,8 @@ New in 1.5a:
 * AM_FUNC_ERROR_AT_LINE, AM_FUNC_STRTOD, AM_FUNC_OBSTACK, AM_PTRDIFF_T
   are no longer shipped, since Autoconf 2.52 provides them (both as AM_
   and AC_).
+* `#line' of Lex and Yacc files are properly set.
+* Fixed CDPATH portability problems, in particular for MacOS X.
 
 New in 1.5:
 * Support for `configure.ac'.
