@@ -1,3 +1,11 @@
+2001-11-01  Akim Demaille  <akim@epita.fr>
+
+	* lib/am/lex.am, lib/am/yacc.am: Use the output file name in
+	`#line' and multiple inclusion guards.
+	* lib/ylwrap: Remove debugging code.
+	(input_dir, input_rx): Move where used.
+	Use the output file name in `#line'.
+
 2001-10-31  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* automake.in (transform): Update documentation.
